--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -101,13 +101,13 @@ spec:
         imagePullPolicy: IfNotPresent
         {{ with .Service.Port.Port }}
         readinessProbe:
-          {{ if eq .Service.Health.Method "http" }}
+          {{ if eq $.Service.Health.Method "http" }}
           httpGet:
             path: "{{$.Service.Health.Path}}"
             port: {{.}}
             scheme: "{{ upper $.Service.Port.Scheme }}"
           {{ end }}
-          {{ if eq .Service.Health.Method "tcp" }}
+          {{ if eq $.Service.Health.Method "tcp" }}
           tcpSocket:
             port: {{.}}
           {{ end }}
